--- a/StarterCode/static/css/style.css
+++ b/StarterCode/static/css/style.css
@@ -9,7 +9,21 @@ body {
   padding: 0;
   margin: 0;
 }
-
+.city {
+  text-transform: capitalize
+}
+.state {
+  text-transform: uppercase
+}
+.country {
+  text-transform: uppercase
+}
+.shape {
+  text-transform: capitalize
+}
+.comments {
+  text-transform: initial
+}
 /* The wrapper contains all of the page's content besides the footer, which is pushed to the bottom of the page */
 .wrapper {
   position: relative;
